bk_ida/gccida/c0/pent_mul_unit_blockage
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/insn-attrtab.c:33482:39: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( executing_insn, "insn-attrtab.c", 33187, "pent_mul_unit_blockage"); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/insn-attrtab.c:33482:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( executing_insn, "insn-attrtab.c", 33187, "pent_mul_unit_blockage"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/insn-attrtab.c:33497:43: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative || !mult_operator( recog_data_0.operand[3], SFmode) ) 
                                          ^~~~~~~~~~~~
                                          recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/insn-attrtab.c:33505:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], SFmode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/insn-attrtab.c:33514:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], XFmode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/insn-attrtab.c:33521:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], TFmode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/insn-attrtab.c:33530:48: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative == 2 || !mult_operator( recog_data_0.operand[3], SFmode) ) 
                                               ^~~~~~~~~~~~
                                               recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/insn-attrtab.c:33547:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], SFmode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/insn-attrtab.c:33559:48: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative == 2 || !mult_operator( recog_data_0.operand[3], DFmode) ) 
                                               ^~~~~~~~~~~~
                                               recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/insn-attrtab.c:33576:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], DFmode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/insn-attrtab.c:33613:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], TFmode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/insn-attrtab.c:33630:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], XFmode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_blockage/src/obj/insn-attrtab.o] Error 1
